[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cptapi"
version = "0.1.0"
description = "Check Point API wrapper"
authors = [
  { name = "Raguga" }
]
readme = "README.md"
requires-python = ">=3.8"

# third-party dependencies
dependencies = [
  "requests>=2.20.0"
]

[tool.setuptools.packages.find]
where = ["."]

